# masterarbeit_code

./: .gitignore  README.md  pyproject.toml
code/src/cm_evaluator/: runner_from_file.py
code/src/cm_evaluator.egg-info/: entry_points.txt
code/src/cm_evaluator/data/: metrics_weights.json
code/src/cm_evaluator/data/datasets/: user_data.json
code/src/cm_evaluator/data/datasets/sample_dataset/: reference_solution_de.json  (+2 more)
code/src/cm_evaluator/evaluators/: evaluatorA.py  evaluatorB.py  evaluatorC.py  evaluator_utils.py
code/src/cm_evaluator/evaluators/common/: common_eval_functions.py
code/src/cm_evaluator/models/: helper_models.py  output_model.py
code/src/cm_evaluator/output/: output_3.json  output_3_empty.json
src/cm_evaluator/: graph_utils.py  runner_from_file.py  utilities.py
src/cm_evaluator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cm_evaluator/api/: main.py
src/cm_evaluator/data/: metrics_de.json  metrics_en.json  metrics_weights.json
src/cm_evaluator/data/datasets/sample_dataset/: reference_solution_en.json  student_solution_empty.json  student_solution_full_de.json
src/cm_evaluator/decorators/: decorators.py
src/cm_evaluator/evaluators/: evaluatorA.py  evaluatorB.py  evaluatorC.py  score_evaluator.py
src/cm_evaluator/logging/: base_logger.py
src/cm_evaluator/models/: metrics.py  user_data.py
src/cm_evaluator/output/: output_3.json  output_3_minimal.json
src/cm_evaluator/tests/: common_eval_functions_test.py  conftest.py  evaluatorC_test.py  score_evaluator_test.py  utilities_test.py
