[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="cm_evaluator"
version = "0.0.1"
requires-python= "> 3.8"
dependencies = [
    "numpy",
    "spacy==3.7.0", 
    "nltk==3.8.1",
    "sentence-transformers",
    "pandas",
    "sentencepiece",
    "fastapi",
    "uvicorn",
    "networkx",
    "matplotlib",
    "pyvis"
]

[project.scripts]
run = "cm_evaluator.process:main"
start_api = "cm_evaluator.api.run:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.spacy.models]
de_core_new_lg = "3.7.0"

[project.optional-dependencies]
test = ["pytest"]