[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="cm_evaluator"
version = "0.0.1"
requires-python= ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "spacy==3.7.0", 
    "nltk==3.8.1",
    "sentence-transformers==3.3.1",
    "pandas==2.2.3",
    "sentencepiece==0.2.0",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "networkx==3.4.2",
    "matplotlib==3.10.0",
    "pyvis==0.3.2",
    "pytest==8.3.4"
]

[project.scripts]
run = "cm_evaluator.process:main"
start_api = "cm_evaluator.api.run:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv"]


[project.optional-dependencies]
test = ["pytest"]